show tile hover on mobile resolutions. Related to fixing the responsive UI #58

--- a/src/css/60-responsive.css
+++ b/src/css/60-responsive.css
@@ -278,4 +278,9 @@
     #application .mobilemenutoggle .line::after{
         margin-top: 8px;
     }
+
+    #application #overview .pagecontent #browsewrap .browseitem .imagewrap .hoverwrap, 
+    #application #overview .pagecontent #tileview .single-tile .tileart .hoverwrap{
+        opacity: 1;
+    }
 }
